# SierraPy

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sierra_scid_peek.py
examples/: basic_usage.py
sierrapy/: __init__.py
sierrapy/client/: __init__.py  dtc_client.py
sierrapy/parser/: __init__.py  async_scid_reader.py  dly_parse.py  scid_parse.py
sierrapy/server/: mini_dtc.py
tests/: test_async_scid_reader.py  test_continuous_tail.py  test_fastscid_peek.py  test_front_month_enumeration.py  test_front_month_loading.py  test_resample_ohlcv.py  test_scid_peek_cli.py  test_scid_service_formats.py  utils_scid.py
tests/fixtures/: example_gc.csv  example_tail.csv
